@@ -3,6 +3,7 @@ package com.robertx22.mine_and_slash.new_content.data_processors;
 import com.robertx22.mine_and_slash.database.map_events.base.MapEvent;
 import com.robertx22.mine_and_slash.database.rarities.MobRarity;
 import com.robertx22.mine_and_slash.database.rarities.mobs.*;
+import com.robertx22.mine_and_slash.db_lists.Rarities;
 import com.robertx22.mine_and_slash.new_content.data_processors.bases.ChunkProcessData;
 import com.robertx22.mine_and_slash.new_content.data_processors.bases.SpawnedMob;
 import com.robertx22.mine_and_slash.new_content.registry.DataProcessor;
@@ -37,6 +38,22 @@ public class ComplexMobProcessor extends DataProcessor {
 
             Stream<SpawnedMob> filter = null;
 
+            int amount = 1;
+
+            for (String x : parts) {
+
+                int am = 0;
+                try {
+                    am = Integer.parseInt(x);
+                } catch (NumberFormatException e) {
+                }
+
+                if (am > 0) {
+                    amount = am;
+                }
+
+            }
+
             for (String x : parts) {
 
                 if (x.equals("common")) {
@@ -56,6 +73,10 @@ public class ComplexMobProcessor extends DataProcessor {
                     isBoss = true;
                 }
 
+            }
+
+            if (rarity == null) {
+                rarity = Rarities.Mobs.random();
             }
 
             for (String x : parts) {
@@ -95,8 +116,10 @@ public class ComplexMobProcessor extends DataProcessor {
                 type = RandomUtils.weightedRandom(filter.collect(Collectors.toList())).type;
 
             }
+            for (int i = 0; i < amount; i++) {
+                MapEvent.summon(type, world, pos, rarity, addPotion, isBoss);
+            }
 
-            MapEvent.summon(type, world, pos, rarity, addPotion, isBoss);
         } catch (Exception e) {
             e.printStackTrace();
         }
