@@ -3,6 +3,7 @@
 * mobs in dungeons can now open wooden doors to haunt player, this doesnt seem to work all the time unfortunately but should add some more danger. 
 * added a trapped chest for dungeons 
 * added more structure block processors to accomodate some builds from the build-a-thon
+* added config for auto compatible items to be salvagable
 3.3.4
 * fix map loot being all lvl 1
 * fix painful lesson item giving a bit more than intended
